Fix panel transitions and overscroll behavior on mobile

--- a/scss/components-edit-screen.scss
+++ b/scss/components-edit-screen.scss
@@ -1,6 +1,5 @@
 .edit-screen {
   height: 100%;
-  background: $really-light-grey;
 
   > .buttons {
     box-sizing: border-box;
