--- a/scss/components-tab-panel.scss
+++ b/scss/components-tab-panel.scss
@@ -5,6 +5,7 @@
   width: 100%;
   height: 100%;
   overflow: auto;
+  background: $really-light-grey;
 
   transition: opacity 0.1s ease;
   will-change: opacity;
